--- a/frontend/src/styles/ListingListItem.scss
+++ b/frontend/src/styles/ListingListItem.scss
@@ -3,7 +3,7 @@
   border-radius: 8px;
   padding: 16px;
   margin: 16px;
-  background-color: #fff;
+  background-color: #f5f5f5;;
   list-style: none;
   width: 500px;
   text-align: center;
