--- a/frontend/src/styles/ListingListItem.scss
+++ b/frontend/src/styles/ListingListItem.scss
@@ -2,10 +2,10 @@
   border: 2px solid #ddd;
   border-radius: 8px;
   padding: 16px;
-  margin: 16px;
-  background-color: #fff;
+  margin: 24px;
+  background-color: #f5f5f5;
   list-style: none;
-  width: 500px;
+  max-width: 450px;
   text-align: center;
 }
 
