--- a/frontend/src/styles/ListingListItem.scss
+++ b/frontend/src/styles/ListingListItem.scss
@@ -22,6 +22,10 @@
   padding: 8px 0;
 }
 
+.listing-list__car-details h3 {
+  font-size: 1.4rem;
+}
+
 .listing-list__mileage {
   display: flex;
   justify-content: space-evenly;
