Created chatbot and modal

--- a/frontend/src/styles/NavBar.scss
+++ b/frontend/src/styles/NavBar.scss
@@ -201,6 +201,23 @@ body {
   }
 }
 
+/* Existing NavBar styles... */
+
+/* Add the SearchBar container class */
+.search-bar-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+/* Other navbar styles... */
+
+
+
+
 
 
 
