--- a/frontend/src/styles/NavBar.scss
+++ b/frontend/src/styles/NavBar.scss
@@ -51,7 +51,7 @@ body {
     }
   }
 
-  .welcome-message {
+  .welcome-message p{
     margin-left: 15px;
     color: #ffffff;
     font-size: 1.2rem;
