--- a/frontend/src/styles/CarListings.scss
+++ b/frontend/src/styles/CarListings.scss
@@ -73,6 +73,18 @@
     padding: 8px 0;
   }
 
+  .car-details__mileage {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  .car-details__price {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #333;
+    margin-top: 8px;
+  }
+
   .car-price {
     font-size: 20px;
   }
